@@ -8,6 +8,7 @@
 - added: `@{components([group], [settings])}` renders all components together from selected group
 - added: a new alias `WAIT()` alias for `U.WAIT()`
 - added: `res.status(code)` for express middleware
+- added: `F.clearSchedule(id)` for removing existing schedules
 
 - updated: `F.load(debug, [types], [path])` supports a new type `service` which enables `F.on('service')`
 - updated: Components (now don't have to have `html` body)
@@ -16,6 +17,7 @@
 - updated: routes (web/websockets/files) can have an identificator in this form `F.route('/', ['id:custom_dentificator']);
 - updated: `UNINSTALL(type, url/id/fn)` supports new types `web`, `websocket` and `file`, e.g. `UNINSTALL('web', 'id:custom_identificator')`
 - updated: `U.request()`, added a new flag: `raw` (sends raw data)
+- updated: `F.schedule()` returns an identificator
 
 - fixed: routing with `upload` flag
 - fixed: workers timeout
